--- a/view/enen/dashboard-includes/code-list.jade
+++ b/view/enen/dashboard-includes/code-list.jade
@@ -1,18 +1,28 @@
 #list.panel.panel-default( data-ng-init='init( )' )
+    .panel-heading 列表
     .panel-body
-        .btn-group
+        .btn-group.btn-group-sm
             a.btn.btn-default( ng-click='list( $event )' ) 刷新
-            a.btn.btn-primary( href='#{site.dashboard}/code/new' ) 新建代码
-    table.table.table-hover.table-striped
-        tr
-            th.column-name 名称
-            th.column-author 作者
-            th.column-actions 功能
-        tr( ng-repeat='code in codes' )
-            td
-                a.btn.btn-link.btn-sm( href='/code/{{ code._id }}', target='_blank' ) {{ code.name }}
-            td
-                a.btn.btn-link.btn-sm( href='/user/{{ code.author._id }}', target='_blank' ) {{ code.author.username }}
-            td
-                a.btn.btn-link.btn-sm( href='#{site.dashboard}/code/{{ code._id }}' ) 编辑
-                a.btn.btn-link.btn-sm( href='javascript:', ng-click='remove( code )' ) 删除
+            a.btn.btn-default 删除
+            a.btn.btn-primary( href='#{site.dashboard}/code/new' ) 创建
+    .table-responsive
+        table.table.table-hover.table-striped
+            tr
+                th.column-select
+                    a.btn.btn-default.btn-xs( data-toggle='button' ) 全选
+                th 标题
+                th 作者
+                th 操作
+            tr( ng-repeat='code in codes' )
+                td
+                    a.btn.btn-default.btn-xs( data-toggle='button' ) 选择
+                td
+                    a( href='/code/{{ code._id }}', target='_blank' ) {{ code.title }}
+                td
+                    a( href='/user/{{ code.author._id }}', target='_blank' ) {{ code.author.username }}
+                td
+                    .btn-group
+                        a.btn.btn-default.btn-xs( href='#{site.dashboard}/code/{{ code._id }}' type='button' ) 修改
+                        a.btn.btn-default.btn-xs( href='javascript:' ng-click='remove( code )' type='button' ) 删除
+        .panel-footer
+            pagination.pagination-sm( total-items='11', page='page', boundary-links='true', direction-links='false', rotate='false', first-text='首页', last-text='尾页' )
