--- a/view/enen/layouts/dashboard.jade
+++ b/view/enen/layouts/dashboard.jade
@@ -8,27 +8,31 @@ html( lang='zh' )
                     a#menu-toggle
                         i.fa.fa-bars
                     #user-name
-                        a( href='/user/#{user._id}', target='_blank' ) #{user.username}
+                        a( href='/user/#{user._id}' target='_blank' ) #{user.username}
                     #user-avatar
                         img
-                ul.nav.nav-pills.nav-stacked
-                    li.active
-                        a( href='javascript:' )
+                ul.nav.nav-pills.nav-stacked( role='navigation' )
+                    li#nav-item-main
+                        a( href='#{site.dashboard}/' )
                             i.fa.fa-home
                             span 首页
-                    li
+                    li#nav-item-show
+                        a( href='#{site.dashboard}/show' )
+                            i.fa.fa-flask
+                            span 广场
+                    li#nav-item-article
                         a( href='#{site.dashboard}/article' )
                             i.fa.fa-pencil-square
                             span 文章
-                    li
+                    li#nav-item-code
                         a( href='#{site.dashboard}/code' )
                             i.fa.fa-code
                             span 代码
-                    li
+                    li#nav-item-picture
                         a( href='javascript:' )
                             i.fa.fa-picture-o
                             span 图库
-                    li
+                    li#nav-item-setting
                         a( href='#{site.dashboard}/setting' )
                             i.fa.fa-cog
                             span 设置
