--- a/client/gallery/front.less
+++ b/client/gallery/front.less
@@ -16,14 +16,15 @@
     height: @hh - 1;
     padding: 15px 0;
     border-bottom: 1px solid #E0E0E0;
+    #login-panel, #signup-panel, #user-panel{
+        display: none;
+    }
     .form-group{
         margin-bottom: 10px;
     }
 }
 
-#login-panel, #signup-panel{
-    display: none;
-}
+
 
 .navbar-enen{
     background-color: #FFF;
