--- a/client/enen/index/main.less
+++ b/client/enen/index/main.less
@@ -4,3 +4,15 @@
 body{
     .user-select( none );
 }
+    #user-panel-username-wrap{
+        float: left;
+        width: 100%;
+    }
+    #user-panel-username{
+        margin-right: 40px;
+    }
+    #logout{
+        float: left;
+        margin: 30px 0 0 -30px;
+        position: relative;
+    }
