github gists api

--- a/client/enen/article/main.less
+++ b/client/enen/article/main.less
@@ -1,2 +1,2 @@
-@import "../../gallery/front.less";
-@import "../../gallery/article.less";
+@import "/client/gallery/front.less";
+@import "/client/gallery/article.less";
