--- a/client/enen/dashboard/main.less
+++ b/client/enen/dashboard/main.less
@@ -1,6 +1,6 @@
-@import "../../gallery/common.less";
-@import "../../gallery/keyframes.less";
-@import "../../gallery/markdown.less";
+@import "/client/gallery/common.less";
+@import "/client/gallery/keyframes.less";
+@import "/client/gallery/markdown.less";
 
 .keyframes-item( show, 0% ) {
     .opacity( 0 );
