--- a/client/enen/index/main.less
+++ b/client/enen/index/main.less
@@ -1,18 +1,6 @@
-@import "../../gallery/front.less";
-@import "../../gallery/article.less";
+@import "/client/gallery/front.less";
+@import "/client/gallery/article.less";
 
 body{
     .user-select( none );
 }
-    #user-panel-username-wrap{
-        float: left;
-        width: 100%;
-    }
-    #user-panel-username{
-        margin-right: 40px;
-    }
-    #logout{
-        float: left;
-        margin: 30px 0 0 -30px;
-        position: relative;
-    }
