--- a/client/enen/login/main.less
+++ b/client/enen/login/main.less
@@ -1,4 +1,4 @@
-@import "../../gallery/front.less";
+@import "/client/gallery/front.less";
 body{
     .login{text-align:center;position:absolute;width:100%;top:50%;margin-top:-93px;}
     .login p{padding:10px 0;}
