--- a/client/gallery/front.less
+++ b/client/gallery/front.less
@@ -22,6 +22,18 @@
     .form-group{
         margin-bottom: 10px;
     }
+    #user-panel-username-wrap{
+        float: left;
+        width: 100%;
+    }
+    #user-panel-username{
+        margin-right: 40px;
+    }
+    #logout{
+        float: left;
+        margin: 30px 0 0 -30px;
+        position: relative;
+    }
 }
 
 
