add edit for github gist

--- a/client/enen/dashboard/main.less
+++ b/client/enen/dashboard/main.less
@@ -152,6 +152,7 @@ body{
     height: 100%;
     padding: 20px;
     z-index: 2;
+    overflow: hidden;
 }
 
 #editor .modal-dialog{
@@ -177,6 +178,10 @@ body{
 .CodeMirror{
     font-size: 13px;
     rendering-intent: auto;
+}
+
+.codemirror{
+    height: 280px;
 }
 
 #list{
