--- a/view/enen/includes/header.jade
+++ b/view/enen/includes/header.jade
@@ -15,7 +15,7 @@ header#header.navbar.navbar-default.navbar-enen.navbar-fixed-top( role='navigati
                         .form-group.col-md-12
                             a.btn.btn-default.btn-sm( data-toggle='button' ) 记住
                         .col-md-12
-                            input#login-panel-btn.btn.btn-default.btn-sm.pull-right( href='javascript:' role='button' type='submit' value='　登　录　' data-loading-text='　登　录　' )
+                            input#login-panel-btn.btn.btn-default.btn-sm.pull-right( role='button' type='submit' value='　登　录　' data-loading-text='　登　录　' )
             .row#signup-panel
                 .col-md-3.col-xs-12
                     .row
