--- a/view/enen/dashboard-includes/code-list.jade
+++ b/view/enen/dashboard-includes/code-list.jade
@@ -17,13 +17,13 @@
                 td
                     a.btn.btn-default.btn-xs( data-toggle='button' ) 选择
                 td
-                    .btn-group-vertical.btn-group-xs
+                    .btn-group-vertical.btn-group-sm
                         a.btn.btn-default( ng-repeat='(filename, file) in code.files' href='{{file.raw_url}}' target='_blank' ) {{ filename }}
                 td
                     a( href='/user/github/{{ code.user.id }}', target='_blank' ) {{ code.user.login }}
                 td
                     .btn-group
-                        a.btn.btn-default.btn-xs( href='#{site.dashboard}/code/{{ code._id }}' type='button' ) 修改
+                        a.btn.btn-default.btn-xs( href='#{site.dashboard}/code/{{ code.id }}' type='button' ) 修改
                         a.btn.btn-default.btn-xs( href='javascript:' ng-click='remove( code )' type='button' ) 删除
         .panel-footer
             pagination.pagination-sm( total-items='11', page='page', boundary-links='true', direction-links='false', rotate='false', first-text='首页', last-text='尾页' )
