--- a/client/gallery/mixin.less
+++ b/client/gallery/mixin.less
@@ -1,147 +1,154 @@
 .text-shadow (@string: 0 1px 3px rgba(0, 0, 0, 0.25)) {
-	text-shadow: @string;
+    text-shadow: @string;
 }
 .box-shadow ( ... ) {
-	-webkit-box-shadow: @arguments;
-	-moz-box-shadow:    @arguments;
-	box-shadow:         @arguments;
+    -webkit-box-shadow: @arguments;
+    -moz-box-shadow:    @arguments;
+    box-shadow:         @arguments;
 }
 .drop-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
-	-webkit-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
-	-moz-box-shadow:	@x @y @blur @spread rgba(0, 0, 0, @alpha);
-	box-shadow:		@x @y @blur @spread rgba(0, 0, 0, @alpha);
+    -webkit-box-shadow:    @x @y @blur @spread rgba(0, 0, 0, @alpha);
+    -moz-box-shadow:    @x @y @blur @spread rgba(0, 0, 0, @alpha);
+    box-shadow:        @x @y @blur @spread rgba(0, 0, 0, @alpha);
 }
 .inner-shadow (@x: 0, @y: 1px, @blur: 2px, @spread: 0, @alpha: 0.25) {
-	-webkit-box-shadow: inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
-	-moz-box-shadow:    inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
-	box-shadow:         inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
+    -webkit-box-shadow: inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
+    -moz-box-shadow:    inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
+    box-shadow:         inset @x @y @blur @spread rgba(0, 0, 0, @alpha);
 }
 
 .box-sizing (@type: border-box) {
-	-webkit-box-sizing: @type;
-	-moz-box-sizing:    @type;
-	box-sizing:         @type;
+    -webkit-box-sizing: @type;
+    -moz-box-sizing:    @type;
+    box-sizing:         @type;
 }
 
 .border-radius (@radius: 5px) {
-	-webkit-border-radius: @radius;
-	-moz-border-radius:    @radius;
-	border-radius:         @radius;
+    -webkit-border-radius: @radius;
+    -moz-border-radius:    @radius;
+    border-radius:         @radius;
 
-	-moz-background-clip:    padding;
-	-webkit-background-clip: padding-box;
-	background-clip:         padding-box;
+    -moz-background-clip:    padding;
+    -webkit-background-clip: padding-box;
+    background-clip:         padding-box;
 }
 .border-radiuses (@topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0) {
-	-webkit-border-top-right-radius:    @topright;
-	-webkit-border-bottom-right-radius: @bottomright;
-	-webkit-border-bottom-left-radius:  @bottomleft;
-	-webkit-border-top-left-radius:     @topleft;
+    -webkit-border-top-right-radius:    @topright;
+    -webkit-border-bottom-right-radius: @bottomright;
+    -webkit-border-bottom-left-radius:  @bottomleft;
+    -webkit-border-top-left-radius:     @topleft;
 
-	-moz-border-radius-topright:        @topright;
-	-moz-border-radius-bottomright:     @bottomright;
-	-moz-border-radius-bottomleft:      @bottomleft;
-	-moz-border-radius-topleft:         @topleft;
+    -moz-border-radius-topright:        @topright;
+    -moz-border-radius-bottomright:     @bottomright;
+    -moz-border-radius-bottomleft:      @bottomleft;
+    -moz-border-radius-topleft:         @topleft;
 
-	border-top-right-radius:            @topright;
-	border-bottom-right-radius:         @bottomright;
-	border-bottom-left-radius:          @bottomleft;
-	border-top-left-radius:             @topleft;
+    border-top-right-radius:            @topright;
+    border-bottom-right-radius:         @bottomright;
+    border-bottom-left-radius:          @bottomleft;
+    border-top-left-radius:             @topleft;
 
-	-moz-background-clip:    padding; 
-	-webkit-background-clip: padding-box; 
-	background-clip:         padding-box; 
+    -moz-background-clip:    padding; 
+    -webkit-background-clip: padding-box; 
+    background-clip:         padding-box; 
 }
 
 .opacity (@opacity: 0.5) {
-	-webkit-opacity: 	@opacity;
-	-moz-opacity: 		@opacity;
-	opacity: 		@opacity;
+    -webkit-opacity:     @opacity;
+    -moz-opacity:         @opacity;
+    opacity:         @opacity;
 }
 
 .gradient (@startColor: #eee, @endColor: white) {
-	background-color: @startColor;
-	background: -webkit-gradient(linear, left top, left bottom, from(@startColor), to(@endColor));
-	background: -webkit-linear-gradient(top, @startColor, @endColor);
-	background: -moz-linear-gradient(top, @startColor, @endColor);
-	background: -ms-linear-gradient(top, @startColor, @endColor);
-	background: -o-linear-gradient(top, @startColor, @endColor);
+    background-color: @startColor;
+    background: -webkit-gradient(linear, left top, left bottom, from(@startColor), to(@endColor));
+    background: -webkit-linear-gradient(top, @startColor, @endColor);
+    background: -moz-linear-gradient(top, @startColor, @endColor);
+    background: -ms-linear-gradient(top, @startColor, @endColor);
+    background: -o-linear-gradient(top, @startColor, @endColor);
 }
 .horizontal-gradient (@startColor: #eee, @endColor: white) {
- 	background-color: @startColor;
-	background-image: -webkit-gradient(linear, left top, right top, from(@startColor), to(@endColor));
-	background-image: -webkit-linear-gradient(left, @startColor, @endColor);
-	background-image: -moz-linear-gradient(left, @startColor, @endColor);
-	background-image: -ms-linear-gradient(left, @startColor, @endColor);
-	background-image: -o-linear-gradient(left, @startColor, @endColor);
+     background-color: @startColor;
+    background-image: -webkit-gradient(linear, left top, right top, from(@startColor), to(@endColor));
+    background-image: -webkit-linear-gradient(left, @startColor, @endColor);
+    background-image: -moz-linear-gradient(left, @startColor, @endColor);
+    background-image: -ms-linear-gradient(left, @startColor, @endColor);
+    background-image: -o-linear-gradient(left, @startColor, @endColor);
 }
 
 .animation ( ... ) {
-	-webkit-animation: @arguments;
+    -webkit-animation: @arguments;
      -moz-animation: @arguments;
        -o-animation: @arguments;
           animation: @arguments;
 }
 
 .transition ( ... ) {
-	-webkit-transition: @arguments;  
-	-moz-transition:    @arguments;
-	-ms-transition:     @arguments; 
-	-o-transition:      @arguments;  
+    -webkit-transition: @arguments;  
+    -moz-transition:    @arguments;
+    -ms-transition:     @arguments; 
+    -o-transition:      @arguments;  
 }
 .transform( ... ){
-	-webkit-transform: @arguments;
-	-moz-transform: 	 @arguments;
-	-ms-transform: 		 @arguments;
-	-o-transform: 		 @arguments;
+    -webkit-transform: @arguments;
+    -moz-transform:      @arguments;
+    -ms-transform:          @arguments;
+    -o-transform:          @arguments;
 }
 .scale (@factor) {
-	-webkit-transform: scale(@factor);
-	-moz-transform: 	 scale(@factor);
-	-ms-transform: 		 scale(@factor);
-	-o-transform: 		 scale(@factor);
+    -webkit-transform: scale(@factor);
+    -moz-transform:      scale(@factor);
+    -ms-transform:          scale(@factor);
+    -o-transform:          scale(@factor);
 }
 .rotate (@deg) {
-	-webkit-transform: rotate(@deg);
-	-moz-transform: 	 rotate(@deg);
-	-ms-transform: 		 rotate(@deg);
-	-o-transform: 		 rotate(@deg);
+    -webkit-transform: rotate(@deg);
+    -moz-transform:      rotate(@deg);
+    -ms-transform:          rotate(@deg);
+    -o-transform:          rotate(@deg);
 }
 .skew (@deg, @deg2) {
-	-webkit-transform:       skew(@deg, @deg2);
-	-moz-transform: 	 skew(@deg, @deg2);
-	-ms-transform: 		 skew(@deg, @deg2);
-	-o-transform: 		 skew(@deg, @deg2);
+    -webkit-transform:       skew(@deg, @deg2);
+    -moz-transform:      skew(@deg, @deg2);
+    -ms-transform:          skew(@deg, @deg2);
+    -o-transform:          skew(@deg, @deg2);
 }
 .translate (@x, @y:0) {
-	-webkit-transform:       translate(@x, @y);
-	-moz-transform: 	 translate(@x, @y);
-	-ms-transform: 		 translate(@x, @y);
-	-o-transform: 		 translate(@x, @y);
+    -webkit-transform:       translate(@x, @y);
+    -moz-transform:      translate(@x, @y);
+    -ms-transform:          translate(@x, @y);
+    -o-transform:          translate(@x, @y);
 }
 .translate3d (@x, @y: 0, @z: 0) {
-	-webkit-transform:       translate3d(@x, @y, @z);
-	-moz-transform: 	 translate3d(@x, @y, @z);
-	-ms-transform: 		 translate3d(@x, @y, @z);
-	-o-transform: 		 translate3d(@x, @y, @z);
+    -webkit-transform:       translate3d(@x, @y, @z);
+    -moz-transform:      translate3d(@x, @y, @z);
+    -ms-transform:          translate3d(@x, @y, @z);
+    -o-transform:          translate3d(@x, @y, @z);
 }
 .perspective (@value: 1000) {
-	-webkit-perspective: 	@value;
-	-moz-perspective: 	@value;
-	-ms-perspective: 	@value;
-	perspective: 		@value;
+    -webkit-perspective:     @value;
+    -moz-perspective:     @value;
+    -ms-perspective:     @value;
+    perspective:         @value;
 }
 .transform-origin (@x:center, @y:center) {
-	-webkit-transform-origin: @x @y;
-	-moz-transform-origin:    @x @y;
-	-ms-transform-origin:     @x @y;
-	-o-transform-origin:      @x @y;
+    -webkit-transform-origin: @x @y;
+    -moz-transform-origin:    @x @y;
+    -ms-transform-origin:     @x @y;
+    -o-transform-origin:      @x @y;
 }
 
 .user-select (...) {
     -webkit-touch-callout: @arguments;
-	-webkit-user-select: @arguments;
-	-moz-user-select: @arguments;
-	-ms-user-select: @arguments;
-	user-select: @arguments;
+    -webkit-user-select: @arguments;
+    -moz-user-select: @arguments;
+    -ms-user-select: @arguments;
+    user-select: @arguments;
+}
+
+.blur( @px ){
+    -webkit-filter: blur(@px);
+       -moz-filter: blur(@px);
+        -ms-filter: blur(@px);    
+            filter: blur(@px); 
 }
