--- a/client/enen/enen/main.less
+++ b/client/enen/enen/main.less
@@ -1,4 +1,6 @@
-@import "common.less";
+@import "/client/gallery/common.less";
+@import "index.less";
+@import "article-list.less";
 
 @hh: 180px;
 
@@ -96,5 +98,7 @@
     margin-top: 60px;
     color: #777;
     text-align: center;
-    border-top: 1px solid #E5E5E5;
+    .container{
+        border-top: 1px solid #E5E5E5;
+    }
 }
