--- a/client/gallery/common.less
+++ b/client/gallery/common.less
@@ -6,6 +6,8 @@
 @color2: #6F6F70;
 @color3: #F4F4F5;
 
+@font: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",tahoma,arial,simsun;
+
 body{
     margin: 0;
     font-size: 12px;
@@ -15,7 +17,7 @@ canvas{
     display: block;
 }
 body, textarea, select, input, button{
-    font-family: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",tahoma,arial,simsun;
+    font-family: @font;
     outline: none;
 }
 a{
