--- a/client/enen/enen/article-list.less
+++ b/client/enen/enen/article-list.less
@@ -1,5 +1,3 @@
-@import "/client/gallery/front.less";
-
 .hexagon{
     @l: 20px;
 
@@ -36,9 +34,40 @@
     }
 }
 
-#article-list{
+@listHeight: 1200px;
+#pillar{
+    height: @listHeight;
+}
+#article-box{
+    position: absolute;
+    top: 0;
+    width: 720px;
+    height: @listHeight;
+}
+#left, #right{
+    background: #F0F0F0;
+}
+#back{
+    background: #CCC;
+}
+#next{
+    margin-top: 60px;
+    height: 40px;
+    line-height: 40px;
+    width: 160px;
+    text-align: center;
+    font-size: 16px;
+    background: #CCC;
+}
+.article-face{
+    position: absolute;
+    top: 0;
     margin: 0;
     padding: 0;
+    width: 720px;
+}
+.article-list{
+    background: #FFF;
 
     li{
         position: relative;
